--- a/19-crud-bbdd-simulada-con-json/src/index.css
+++ b/19-crud-bbdd-simulada-con-json/src/index.css
@@ -1,3 +1,11 @@
 body{
   margin: 0;
 }
+main{
+  display: grid;
+}
+@media screen and (min-width:1000px){
+  main{
+      grid-template-columns: repeat(3,1fr);
+  }
+}
