--- a/29-Ejercicios/2-app-peliculas-filtro-con-info-pelicula/src/components/MovieList.module.css
+++ b/29-Ejercicios/2-app-peliculas-filtro-con-info-pelicula/src/components/MovieList.module.css
@@ -3,8 +3,8 @@
     text-decoration: none;
 }
 .movieImg{
-    width: 200px;
-    height: 300px;
+    min-width: 200px;
+    min-height: 300px;
     border-radius: 5px;
     background-color: #fff;
     padding: 5px;
