--- a/29-Ejercicios/2-app-peliculas-filtro-con-info-pelicula/src/components/FormMovieSearch.module.css
+++ b/29-Ejercicios/2-app-peliculas-filtro-con-info-pelicula/src/components/FormMovieSearch.module.css
@@ -1,3 +1,12 @@
-.form{
-    text-align: center;
+.form {
+  text-align: center;
+  margin-bottom: 1em;
+}
+.inputSearchMovie {
+  padding: 10px;
+  width: 300px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  border: 1px solid red;
 }
