--- a/29-Ejercicios/3-todo-app/src/App.css
+++ b/29-Ejercicios/3-todo-app/src/App.css
@@ -1,14 +1,19 @@
-.container{
-  margin: auto;
+.container {
+  margin: 30px auto 0 auto;
   width: 50%;
-  border: 1px solid #73AD21;
-  background-color: #32746A;
+  border-radius: 50px;
+  background: #e6e5e6;
+  box-shadow: 20px 20px 40px #c4c3c4, -20px -20px 40px #ffffff;
   padding: 10px;
   display: flex;
   flex-direction: column;
 }
 
-.add-btn{
- background-color: red;
- color: #fff;
+.add-btn {
+  background-color: #c4c3c4;
+  border: none;
+  color: red;
+  width: 30px;
+  height: 100%;
+  margin-top: 15px;
 }
