--- a/29-Ejercicios/3-todo-app/src/components/CrudFormToDo.css
+++ b/29-Ejercicios/3-todo-app/src/components/CrudFormToDo.css
@@ -1,4 +1,10 @@
-.form{
-    width: 100%;
-    text-align: center;
+.form-container {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+.form {
+  max-width: 60%;
+  text-align: center;
 }
